[package]
name = "flood-predictor"
version = "0.1.0"
keywords = ["usgs", "flash-flooding"]
categories = ["command-line-utilities"]
repository = "https://github.com/awkless/flood-predictor.git"
readme = "README.md"
authors = [
    "Jason Pena <jasonpena@awkless.com>",
    "Carlos Ramirez <carlosjrcem@gmail.com>",
    "Vincent Sanchez <vsanche1@nmsu.edu>"
]
edition = "2021"
license = "MIT"
rust-version = "1.82.0"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
